build/deploy/skysign-mission-gateway-backend-envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: skysign-mission-gateway-backend-envoy
data:
  envoy.json: |
    {
      "static_resources": {
        "listeners": [
          {
            "name": "listener_0",
            "address": {
              "socket_address": { "address": "127.0.0.1", "port_value": "15001" }
            },
            "filter_chains": {
              "filters": [
                {
                  "name": "envoy.http_connection_manager",
                  "config": {
                    "codec_type": "AUTO",
                    "stat_prefix": "ingress_http",
                    "route_config": {
                      "name": "local_route",
                      "virtual_hosts": [
                        {
                          "name": "service",
                          "domains": ["*"],
                          "routes": [
                            {
                              "match": {
                                "prefix": "/"
                              },
                              "route": { "cluster": "skysign-mission-gateway-backend" }
                            }
                          ]
                        }
                      ]
                    },
                    "access_log": [
                      {
                        "name": "envoy.file_access_log",
                        "config": {
                          "path": "/dev/stdout"
                        }
                      }
                    ],
                    "http_filters": [
                      {
                        "name": "envoy.router",
                        "config": {}
                      }
                    ]
                  }
                }
              ]
            }
          },
          {
            "name": "listener_1",
            "address": {
              "socket_address": { "address": "127.0.0.1", "port_value": "5001" }
            },
            "filter_chains": {
              "filters": [
                {
                  "name": "envoy.http_connection_manager",
                  "config": {
                    "codec_type": "AUTO",
                    "stat_prefix": "egress_http",
                    "route_config": {
                      "name": "local_route",
                      "virtual_hosts": [
                        {
                          "name": "skysign-mission-backend",
                          "domains": ["*"],
                          "routes": [
                            {
                              "match": {
                                "prefix": "/",
                                "headers": [
                                  {"name": "content-type", "exact_match": "application/grpc"}
                                ]
                              },
                              "route": { "cluster": "skysign-mission-backend" }
                            }
                          ]
                        }
                      ]
                    },
                    "access_log": [
                      {
                        "name": "envoy.file_access_log",
                        "config": {
                          "path": "/dev/stdout"
                        }
                      }
                    ],
                    "http_filters": [
                      {
                        "name": "envoy.router",
                        "config": {}
                      }
                    ]
                  }
                }
              ]
            }
          }
        ],
        "clusters": [
          {
            "name": "skysign-mission-gateway-backend",
            "connect_timeout": "0.25s",
            "type": "STATIC",
            "lb_policy": "ROUND_ROBIN",
            "hosts": [
              {
                "socket_address": { "address": "127.0.0.1", "port_value": "6000" }
              }
            ]
          },
          {
            "name": "skysign-mission-backend",
            "http2_protocol_options": {},
            "connect_timeout": "0.25s",
            "type": "STRICT_DNS",
            "lb_policy": "ROUND_ROBIN",
            "hosts": [
              {
                "socket_address": { "address": "skysign-mission", "port_value": "5001" }
              }
            ]
          }
        ]       
      },
      "admin": {
        "access_log_path": "/dev/stdout",
        "address": {
          "socket_address": { "address": "127.0.0.1", "port_value": "8001" }
        }
      }
    }
